# WBIC_Go2Arm_Controller

./: .gitignore  CODE_STRUCTURE_NOTES.md  README.md  args.py  environment.yaml  main.py  run_go2piper_wbic.py  unitree_go2piper_wbic_node.py
codegen/: CMakeLists.txt
dynamics/: dynamics.py  dynamics_centroidal_acc.py  dynamics_centroidal_vel.py  dynamics_whole_body_acc.py  dynamics_whole_body_torque.py
optimization/: ocp.py  ocp_centroidal_acc.py  ocp_centroidal_vel.py  ocp_factory.py  ocp_whole_body_aba.py  ocp_whole_body_acc.py  ocp_whole_body_rnea.py
robots/b2_z1_description/srdf/: b2_z1.srdf
robots/b2_z1_description/urdf/: b2_z1.urdf
utils/: robot.py  state_adapter.py  visualization.py
